--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
 
 </section>
 
-<section class="header4 cid-rgc6FBLayw" id="header4-n">
+<section class="header4 cid-rgc6FBLayw" id="header4-n" style="max-width:100%; max-height:50px;">
 
     
 
