--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                     Perfomance
                 </h3>
                 <p class="mbr-text mbr-fonts-style align-center display-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aperiam
+                    Using micro services orchestration helps during spikes in demand to Scale up applications & high availability.   
                 </p>             
             </div>
             
@@ -120,7 +120,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                     Flexibility
                 </h3>
                 <p class="mbr-text mbr-fonts-style align-center display-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus aperiam
+                    Our team is online and available in every time zone of the world
                 </p>
             </div>
         
