--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="">Tech Stack</a></h4>
-            <p class="description">Your Technology stack our solution</p>
+            <p class="description">Use the perfect technology stack for your Business.</p>
           </div>
         </div>
 
