--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>SyncScale</title>
-  <meta content="Development,Deployment,AWS,GCP,Azure" name="description">
-  <meta content="" name="keywords">
+  <meta content="Scale your Business with customised solutions" name="description">
+  <meta content="Website Development, Deployment, AWS, GCP, Azure, Docker, Kubernetes, Ireland, Mumbai, India, Cork, Dublin, Python, Django, NodeJS, Artificial Intelligence, Machine Learning, CI/CD Pipeline " name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -455,13 +455,13 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>contact@syncscale.com</p>
+                <p><a href="mailto:contact@syncscale.com">contact@syncscale.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>9876543210</p>
+                <p><a href="tel:9876543210">9876543210</a></p>
                 <p>0123456789</p>
               </div>
 
