--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>SyncScale</title>
-  <meta content="Scale your Business with customised solutions" name="description">
+  <meta content="Scale your Business with customised products" name="description">
   <meta content="Website Development, Deployment, AWS, GCP, Azure, Docker, Kubernetes, Ireland, Mumbai, India, Cork, Dublin, Python, Django, NodeJS, Artificial Intelligence, Machine Learning, CI/CD Pipeline " name="keywords">
 
   <!-- Favicons -->
@@ -95,7 +95,7 @@
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="">Tech Stack</a></h4>
-            <p class="description">Use the perfect technology stack for your Business.</p>
+            <p class="description">Use the perfect technology stack for your Business products.</p>
           </div>
         </div>
 
