--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">24x7 Availability</a></h4>
+              <p>Our team is spreaded across the globe and is available around the clock at all times</p>
             </div>
           </div>
 
