--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>SyncScale</title>
-  <meta content="Scale your Business with customised products" name="description">
+  <meta content="Scale your Business with our Products" name="description">
   <meta content="Website Development, Deployment, AWS, GCP, Azure, Docker, Kubernetes, Ireland, Mumbai, India, Cork, Dublin, Python, Django, NodeJS, Artificial Intelligence, Machine Learning, CI/CD Pipeline " name="keywords">
 
   <!-- Favicons -->
