contact number updated

--- a/index.html
+++ b/index.html
@@ -461,8 +461,9 @@
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p><a href="tel:9876543210">9876543210</a></p>
-                <p>0123456789</p>
+                <p>Europe: <a href="tel:+353 89 435 3993">+353 89 435 3993</a></p>
+                <p>USA: <a href="tel:+1 (515) 708-5978">+1 (515) 708-5978</a></p>
+                <p>India: <a href="tel:+91 8939187575">+91 8939187575</a></p>
               </div>
 
             </div>
